--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,6 +26,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      overflow: hidden;
     }
     h1 {
       font-size: clamp(3rem, 6vw, 6rem);
@@ -40,18 +42,17 @@
     input {
       padding: 1vh 1vw;
       font-size: clamp(2rem, 4vw, 4rem);
-      width: 30vw;
-      max-width: 200px;
+      width: 60%;
       text-align: center;
       border-radius: 12px;
       border: none;
       display: block;
-      margin: 0 auto;
+      margin: 3vh auto;
     }
     button {
       padding: 1.5vh 3vw;
       font-size: clamp(2rem, 4vw, 4rem);
-      margin-top: 4vh;
+      margin-top: 3vh;
       cursor: pointer;
       border: none;
       border-radius: 16px;
@@ -70,163 +71,207 @@
       font-weight: bold;
       letter-spacing: 0.2em;
     }
+    .player-bar {
+      display: flex;
+      justify-content: center;
+      gap: 2vw;
+      margin-bottom: 3vh;
+      flex-wrap: wrap;
+    }
+    .player {
+      opacity: 0.5;
+      font-size: 2.5rem;
+      transition: all 0.3s ease;
+    }
+    .player.active {
+      opacity: 1;
+      font-size: 4rem;
+    }
+    .score-row {
+      margin: 2vh;
+      font-size: 2.5rem;
+    }
+    .score-row button {
+      font-size: 2rem;
+      margin: 0 1vw;
+      padding: 0.5vh 1.5vw;
+    }
   </style>
 </head>
 <body>
   <div class="card" id="app"></div>
 
-  <script>
-    const WORD_BANK = [
-      "APPLE","BANANA","ORANGE","HOUSE","CAR","TRAIN","PLANE","BOAT","RIVER",
-      "OCEAN","BEACH","MOUNTAIN","FOREST","DESERT","CLOUD","RAIN","SNOW",
-      "THUNDER","LIGHTNING","FIRE","SMOKE","STONE","ROCK","SAND","CHAIR",
-      "TABLE","COUCH","BED","PILLOW","BLANKET","CLOCK","WATCH","PHONE",
-      "COMPUTER","SCREEN","KEYBOARD","MOUSE","CAMERA","LIGHT","LAMP","DOOR",
-      "WINDOW","FLOOR","CEILING","WALL","STAIRS","BRIDGE","ROAD","STREET",
-      "CITY","TOWN","VILLAGE","SCHOOL","CLASS","TEACHER","STUDENT","BOOK",
-      "PAPER","PENCIL","PEN","ERASER","BAG","BACKPACK","SHOES","HAT","COAT",
-      "SHIRT","PANTS","FOOD","BREAD","CHEESE","MILK","WATER","COFFEE","TEA",
-      "SUGAR","SALT","PEPPER","CAKE","COOKIE","ICE","CANDLE","MIRROR",
-      "MUSIC","SONG","MOVIE","GAME","BALL","TOY","GIFT"
-    ];
+<script>
+const WORD_BANK = [
+  "APPLE","BANANA","ORANGE","HOUSE","CAR","TRAIN","PLANE","BOAT","RIVER",
+  "OCEAN","BEACH","MOUNTAIN","FOREST","DESERT","CLOUD","RAIN","SNOW",
+  "THUNDER","LIGHTNING","FIRE","SMOKE","STONE","ROCK","SAND","CHAIR",
+  "TABLE","COUCH","BED","PILLOW","BLANKET","CLOCK","WATCH","PHONE",
+  "COMPUTER","SCREEN","KEYBOARD","MOUSE","CAMERA","LIGHT","LAMP","DOOR",
+  "WINDOW","FLOOR","CEILING","WALL","STAIRS","BRIDGE","ROAD","STREET",
+  "CITY","TOWN","VILLAGE","SCHOOL","CLASS","TEACHER","STUDENT","BOOK",
+  "PAPER","PENCIL","PEN","ERASER","BAG","BACKPACK","SHOES","HAT","COAT",
+  "SHIRT","PANTS","FOOD","BREAD","CHEESE","MILK","WATER","COFFEE","TEA",
+  "SUGAR","SALT","PEPPER","CAKE","COOKIE","ICE","CANDLE","MIRROR",
+  "MUSIC","SONG","MOVIE","GAME","BALL","TOY","GIFT"
+];
 
-    const EMOJI_BANK = [
-      "🐶","🐱","🐭","🐹","🐰","🦊","🐻","🐼","🐨","🐯",
-      "🦁","🐮","🐷","🐸","🐵","🐔","🐧","🐦","🐤","🦆",
-      "🦉","🦇","🐺","🐗","🐴","🦄","🐝","🦋","🐌","🐢"
-    ];
+const EMOJI_BANK = [
+  "🐶","🐱","🐭","🐹","🐰","🦊","🐻","🐼","🐨","🐯",
+  "🦁","🐮","🐷","🐸","🐵","🐔","🐧","🐦","🐤","🦆",
+  "🦉","🦇","🐺","🐗","🐴","🦄","🐝","🦋","🐌","🐢"
+];
 
-    const app = document.getElementById("app");
+const app = document.getElementById("app");
 
-    let players = 4;
-    let currentPlayer = 1;
-    let secretWord = "";
-    let oddPlayer = 1;
-    let countdownInterval = null;
-    let countdownCallback = null;
-    let playerEmojis = [];
+let players = 4;
+let currentPlayer = 1;
+let secretWord = "";
+let oddPlayer = 1;
+let playerEmojis = [];
+let playerPoints = [];
 
-    // 🔊 Countdown blip
-    const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+let countdownInterval = null;
+let countdownCallback = null;
 
-    function playBlip() {
-      const osc = audioCtx.createOscillator();
-      const gain = audioCtx.createGain();
+const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
 
-      osc.frequency.value = 880;
-      gain.gain.setValueAtTime(0.1, audioCtx.currentTime);
-      gain.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + 0.08);
+function playBlip() {
+  const osc = audioCtx.createOscillator();
+  const gain = audioCtx.createGain();
+  osc.frequency.value = 880;
+  gain.gain.setValueAtTime(0.1, audioCtx.currentTime);
+  gain.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + 0.08);
+  osc.connect(gain);
+  gain.connect(audioCtx.destination);
+  osc.start();
+  osc.stop(audioCtx.currentTime + 0.08);
+}
 
-      osc.connect(gain);
-      gain.connect(audioCtx.destination);
+function renderPlayerBar() {
+  return `
+    <div class="player-bar">
+      ${playerEmojis.map((e,i)=>`
+        <div class="player ${i+1===currentPlayer?"active":""}">
+          ${e} (${playerPoints[i]})
+        </div>`).join("")}
+    </div>
+  `;
+}
 
-      osc.start();
-      osc.stop(audioCtx.currentTime + 0.08);
-    }
+function showStartScreen() {
+  app.innerHTML = `
+    <h1>Word Faker Game</h1>
+    <p>How many players?</p>
+    <input id="playerInput" placeholder="4" />
+    <button onclick="startGame()">Start</button>
+  `;
+}
 
-    function getPlayerLabel(num) {
-      return `${playerEmojis[num - 1]} Player ${num}`;
-    }
+function startGame() {
+  audioCtx.resume();
+  const input = parseInt(document.getElementById("playerInput").value, 10);
+  players = Number.isFinite(input) && input > 0 ? input : 4;
 
-    function showStartScreen() {
+  if (playerPoints.length !== players) {
+    playerPoints = Array(players).fill(0);
+  }
+
+  currentPlayer = 1;
+  secretWord = WORD_BANK[Math.floor(Math.random()*WORD_BANK.length)];
+  oddPlayer = Math.floor(Math.random()*players)+1;
+
+  const shuffled = [...EMOJI_BANK].sort(()=>Math.random()-0.5);
+  playerEmojis = shuffled.slice(0, players);
+
+  showReadyScreen();
+}
+
+function showReadyScreen() {
+  showCountdown(`${renderPlayerBar()}<h2>Player ${currentPlayer} ready?</h2>`,5,showValueScreen);
+}
+
+function showValueScreen() {
+  const value = currentPlayer===oddPlayer?"???":secretWord;
+  showCountdown(`${renderPlayerBar()}<div class="value">${value}</div>`,5,nextPlayer);
+}
+
+function nextPlayer() {
+  if (currentPlayer < players) {
+    currentPlayer++;
+    showReadyScreen();
+  } else {
+    showEndScreen();
+  }
+}
+
+function showEndScreen() {
+  app.innerHTML = `
+    ${renderPlayerBar()}
+    <h1>Now PLAY!</h1>
+    <button onclick="showRevealScreen()">Reveal</button>
+  `;
+}
+
+function showRevealScreen() {
+  app.innerHTML = `
+    ${renderPlayerBar()}
+    <h1>Reveal</h1>
+    <p>${playerEmojis[oddPlayer-1]} was The Faker</p>
+    <button onclick="showGuessScreen()">Faker Guess</button>
+  `;
+}
+
+function showGuessScreen() {
+  app.innerHTML = `
+    ${renderPlayerBar()}
+    <h1>Faker Guess</h1>
+    <input id="guessInput" placeholder="Guess the word" />
+    <button onclick="showScoreScreen()">Submit</button>
+  `;
+}
+
+function showScoreScreen() {
+  app.innerHTML = `
+    <h1>Adjust Scores</h1>
+    ${playerEmojis.map((e,i)=>`
+      <div class="score-row">
+        ${e} (${playerPoints[i]})
+        <button onclick="playerPoints[${i}]++">+</button>
+        <button onclick="playerPoints[${i}]--">-</button>
+      </div>`).join("")}
+    <button onclick="startGame()">Next Round</button>
+  `;
+}
+
+function skipCountdown() {
+  clearInterval(countdownInterval);
+  countdownCallback && countdownCallback();
+}
+
+function showCountdown(message, seconds, callback) {
+  clearInterval(countdownInterval);
+  countdownCallback = callback;
+  let remaining = seconds;
+
+  app.innerHTML = `
+    ${message}
+    <div class="countdown" id="count">${remaining}</div>
+    <button onclick="skipCountdown()">Skip</button>
+  `;
+
+  countdownInterval = setInterval(()=>{
+    playBlip();
+    remaining--;
+    document.getElementById("count").textContent = remaining;
+    if (remaining <= 0) {
       clearInterval(countdownInterval);
-      app.innerHTML = `
-        <h1>Word Faker Game</h1>
-        <p style="font-size: clamp(1.6rem, 2.5vw, 2.8rem); line-height: 1.4; max-width: 80%; margin: 0 auto 4vh auto;">
-          Each player gets a turn to secretly view a word while the others look away.
-          All players see the same word… except one.
-          That player sees only question marks and is known as <strong>The Faker</strong>.
-          <br /><br />
-          When it’s time to play, each player says a different word related to the secret word.
-          The group must figure out who The Faker is.
-        </p>
-        <p>How many players?</p>
-        <input id="playerInput" placeholder="4" />
-        <button onclick="startGame()">Start</button>
-      `;
+      setTimeout(callback,300);
     }
+  },1000);
+}
 
-    function startGame() {
-      audioCtx.resume();
-
-      const input = document.getElementById("playerInput").value;
-      const parsed = parseInt(input, 10);
-      players = Number.isFinite(parsed) && parsed > 0 ? parsed : 4;
-
-      currentPlayer = 1;
-      secretWord = WORD_BANK[Math.floor(Math.random() * WORD_BANK.length)];
-      oddPlayer = Math.floor(Math.random() * players) + 1;
-
-      const shuffled = [...EMOJI_BANK].sort(() => Math.random() - 0.5);
-      playerEmojis = shuffled.slice(0, players);
-
-      showReadyScreen();
-    }
-
-    function showReadyScreen() {
-      showCountdown(`${getPlayerLabel(currentPlayer)} ready?`, 5, showValueScreen);
-    }
-
-    function showValueScreen() {
-      const value = currentPlayer === oddPlayer ? "???" : secretWord;
-      showCountdown(`<span class="value">${value}</span>`, 5, nextPlayer);
-    }
-
-    function nextPlayer() {
-      if (currentPlayer < players) {
-        currentPlayer++;
-        showCountdown(`Get ${getPlayerLabel(currentPlayer)}`, 5, showReadyScreen);
-      } else {
-        showEndScreen();
-      }
-    }
-
-    function showEndScreen() {
-      clearInterval(countdownInterval);
-      app.innerHTML = `
-        <h1>Now PLAY!</h1>
-        <button onclick="showRevealScreen()">Reveal</button>
-      `;
-    }
-
-    function showRevealScreen() {
-      app.innerHTML = `
-        <h1>Reveal</h1>
-        <p>${getPlayerLabel(oddPlayer)} was The Faker</p>
-        <button onclick="showStartScreen()">Reset</button>
-      `;
-    }
-
-    function skipCountdown() {
-      clearInterval(countdownInterval);
-      if (countdownCallback) countdownCallback();
-    }
-
-    function showCountdown(message, seconds, callback) {
-      clearInterval(countdownInterval);
-      countdownCallback = callback;
-      let remaining = seconds;
-
-      app.innerHTML = `
-        <h2>${message}</h2>
-        <div class="countdown" id="count">${remaining}</div>
-        <button onclick="skipCountdown()">Skip Countdown</button>
-      `;
-
-      countdownInterval = setInterval(() => {
-        playBlip();
-        remaining--;
-        document.getElementById("count").textContent = remaining;
-
-        if (remaining <= 0) {
-          clearInterval(countdownInterval);
-          setTimeout(callback, 300);
-        }
-      }, 1000);
-    }
-
-    showStartScreen();
-  </script>
+showStartScreen();
+</script>
 </body>
 </html>
-
