--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -140,6 +139,15 @@ function blip(freq){
   o.stop(audioCtx.currentTime + 0.12);
 }
 
+/* 🔀 NEW: shuffle player order while keeping scores attached */
+function shufflePlayers(){
+  for(let i = emojis.length - 1; i > 0; i--){
+    const j = Math.floor(Math.random() * (i + 1));
+    [emojis[i], emojis[j]] = [emojis[j], emojis[i]];
+    [points[i], points[j]] = [points[j], points[i]];
+  }
+}
+
 function renderBar(active=true){
   return `
   <div class="player-bar">
@@ -175,6 +183,7 @@ function startGame(){
 }
 
 function startRound(){
+  shufflePlayers();          // ← player order randomized each round
   secretWord = WORD_BANK[Math.floor(Math.random()*WORD_BANK.length)];
   oddPlayer = Math.floor(Math.random()*players)+1;
   currentPlayer = 1;
